log
Wed, Mar 19, 2025  8:48:24 AM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Wed, Mar 19, 2025  9:15:24 AM: 
 exercises.c | 18 ++++++++++++++++--
 1 file changed, 16 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:66:12: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       suma += (int*) elemento;
            ^~
cc1.exe: all warnings being treated as errors
Compilation failed
dbd3225
Wed, Mar 19, 2025  9:16:28 AM: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  1|4
total_score: 10/70
289c18a
Wed, Mar 19, 2025  9:18:43 AM: 
 exercises.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:66:12: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       suma += elemento;
            ^~
cc1.exe: all warnings being treated as errors
Compilation failed
32d1ddd
Wed, Mar 19, 2025  9:20:30 AM: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|3
total_score: 20/70
234a346
Wed, Mar 19, 2025  9:22:58 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
c:/mingw/bin/../lib/gcc/mingw32/6.3.0/../../../../mingw32/bin/ld.exe: cannot open output file a.out: Permission denied
collect2.exe: error: ld returned 1 exit status
Compilation failed
b27ccdc
Wed, Mar 19, 2025  9:23:12 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
c:/mingw/bin/../lib/gcc/mingw32/6.3.0/../../../../mingw32/bin/ld.exe: cannot open output file a.out: Permission denied
collect2.exe: error: ld returned 1 exit status
Compilation failed
15b3059
Wed, Mar 19, 2025  9:24:25 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
c:/mingw/bin/../lib/gcc/mingw32/6.3.0/../../../../mingw32/bin/ld.exe: cannot open output file a.out: Permission denied
collect2.exe: error: ld returned 1 exit status
Compilation failed
ebbf2c4
Wed, Mar 19, 2025  9:26:42 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
c:/mingw/bin/../lib/gcc/mingw32/6.3.0/../../../../mingw32/bin/ld.exe: cannot open output file a.out: Permission denied
collect2.exe: error: ld returned 1 exit status
Compilation failed
323dd8b
Fri, Mar 21, 2025  4:47:56 PM: 
 exercises.c | 32 ++++++++++++++++++++++++++++----
 1 file changed, 28 insertions(+), 4 deletions(-)
./test.sh: line 26: gcc: command not found
Compilation failed
ba2ccd2
